# robot-pose-helper

./: .gitignore  CONTRIBUTING.md  DEPLOY.md  PRE_DEPLOY_CHECKLIST.md  README.md  angles.py  main.py  pyproject.toml  requirements.txt  settings.ini
model_runtime/: realtime_predict.py
model_training/: capture_angles.py  config.py  dataset.py  train_model.py
models/: .gitkeep
tests/: test_angles.py
