[project]
name = "robot-pose-helper"
version = "0.1.0"
description = "Сбор углов позы человека с камеры и обучение простой модели движений для человекоподобных роботов."
authors = [
  { name = "AlikeOrk" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["robotics", "pose-detection", "mediapipe", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mediapipe==0.10.32",
  "opencv-python==4.13.0.92",
  "numpy",
  "pandas",
  "scikit-learn",
  "joblib",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
]

[project.urls]
homepage = "https://github.com/AlikeOrk/robot-pose-helper"
repository = "https://github.com/AlikeOrk/robot-pose-helper"
issues = "https://github.com/AlikeOrk/robot-pose-helper"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]

